--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Just go back already
 <hr>
 Fine, if you want to become suicidal that's on you
 <hr>
-<a href="https://youreallyneedtoseethisfortniteskin.github.io">Enjoy suffering</a>
+<a href="https://youreallyneedtoseethisfortniteskin.github.io">Enjoy the eternal suffering you'll endure after seeing this</a>
 </h1>
 </body>
 </html>
